changed the inputs for a textarea, added an auto resize for those textareas

--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -94,9 +94,9 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Labor-Resultate</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.laboratoryReports.length"></li>
-                                <li ng-repeat="laboratoryReport in dc.laboratoryReports"><a ng-href="{{baseUrl}}set/laboratory/{{laboratoryReport.id}}/">{{laboratoryReport.name}}</a></li>
+                                <li ng-repeat="laboratoryReport in dc.laboratoryReports"><a ng-href="{{dc.baseUrl}}set/laboratory/{{laboratoryReport.id}}/">{{laboratoryReport.name}}</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}goto/laboratory/">Gehe zu Labor</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}goto/laboratory/">Gehe zu Labor</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown on-toggle="dc.loadDocuments(open, dc.documents)">
@@ -106,13 +106,13 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Briefe & Dokumente</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.documents.length"></li>
-                                <li ng-repeat="document in dc.documents"><a ng-href="{{baseUrl}}set/document/{{document.id}}/">{{document.name}}</a></li>
+                                <li ng-repeat="document in dc.documents"><a ng-href="{{dc.baseUrl}}set/document/{{document.id}}/">{{document.name}}</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}treatment/{{treatment.id}}/document/letterto/">Neuer Brief an</a></li>
-                                <li><a ng-href="{{baseUrl}}treatment/{{treatment.id}}/document/letterfrom/">Neuer Brief von</a></li>
-                                <li><a ng-href="{{baseUrl}}treatment/{{treatment.id}}/document/document/">Neues Dokument</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/letterto/">Neuer Brief an</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/letterfrom/">Neuer Brief von</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/document/">Neues Dokument</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}goto/document/">Gehe zu Briefe & Dokumente</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}goto/document/">Gehe zu Briefe & Dokumente</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown on-toggle="dc.loadDisability(open)">
@@ -122,9 +122,9 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Arbeitsunfähigkeit</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.disabilityCertificates.length"></li>
-                                <li ng-repeat="disabilityCertificate in dc.disabilityCertificates"><a ng-href="{{baseUrl}}set/disability/{{disabilityCertificate.id}}/">{{disabilityCertificate.name}}</a></li>
+                                <li ng-repeat="disabilityCertificate in dc.disabilityCertificates"><a ng-href="{{dc.baseUrl}}set/disability/{{disabilityCertificate.id}}/">{{disabilityCertificate.name}}</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}treatment/{{treatment.id}}/disability/">Neue Arbeitsunfähigkeit</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/disability/">Neue Arbeitsunfähigkeit</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown on-toggle="dc.loadBiometrics(open)">
@@ -134,11 +134,11 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Biometrische Daten</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.biometrics.length"></li>
-                                <li ng-repeat="biometric in dc.biometrics"><a ng-href="{{baseUrl}}set/biometric/{{biometric.id}}/">{{biometric.name}}</a></li>
+                                <li ng-repeat="biometric in dc.biometrics"><a ng-href="{{dc.baseUrl}}set/biometric/{{biometric.id}}/">{{biometric.name}}</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}treatment/{{treatment.id}}/biometric/">Neue Biometrische Daten</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/biometric/">Neue Biometrische Daten</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}goto/biometric/">Gehe zu Biometrische Daten</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}goto/biometric/">Gehe zu Biometrische Daten</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown>
@@ -148,14 +148,14 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Leistungen</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}treatment/{{treatment.id}}/service/treatment/">Neue Leistungen zu Behandlung</a></li>
-                                <li><a ng-href="{{baseUrl}}treatment/{{treatment.id}}/service/generic/">Neue Leistungen</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/service/treatment/">Neue Leistungen zu Behandlung</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/service/generic/">Neue Leistungen</a></li>
 
                                 <!-- TODO show 2 Menus above if Treatment is NOT billed, show following Menu if Treatment is billed -->
-                                <li><a ng-href="{{baseUrl}}show/service/{{treatment.id}}/">Leistungen zeigen</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}show/service/{{treatment.id}}/">Leistungen zeigen</a></li>
 
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{baseUrl}}goto/invoice/">Gehe zu Rechnungen</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}goto/invoice/">Gehe zu Rechnungen</a></li>
                             </ul>
                         </div>
                     </div>
