--- a/js/templates/treatment-column.tpl.html
+++ b/js/templates/treatment-column.tpl.html
@@ -1,6 +1,10 @@
 <div ng-class="columnClass">
     <div class="form-group">
         <!--<input class="form-control" ng-model="content" ng-disabled="{{readonly}}">-->
-        <textarea class="form-control" ng-model="content" msd-elastic ng-disabled="{{readonly}}"></textarea>
+        <div id="wysihtml-toolbar-{{uniqueId}}" class="wysihtml-toolbar" style="display: none;">
+            <a data-wysihtml5-command="bold">bold</a>
+            <a data-wysihtml5-command="italic">italic</a>
+        </div>
+        <textarea class="form-control wysihtml-textarea" ng-model="content" msd-elastic id="wysihtml-{{uniqueId}}" ng-disabled="{{readonly}}"></textarea>
     </div>
 </div>
