--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 treatment" ng-class="{secondary: !treatment.isMainTreatment, closed: treatment.closed}" tabindex="-1">
+<div class="col-xs-12 treatment mandator-{{treatment.mandator}}" ng-class="{secondary: !treatment.isMainTreatment, closed: treatment.closed}" tabindex="-1">
     <div class="panel" ng-class="treatment.type=='success' ? 'panel-success' : 'panel-default'">
         <div class="panel-heading clearfix">
             <div class="row">
