--- a/css/custom.css
+++ b/css/custom.css
@@ -13,7 +13,7 @@
     display: flex;
     margin: 0 auto;
     position: relative;
-    top: calc(50% - 30px);
+    top: 50%;
 }
 
 .loading-icon div {
