style changed again

--- a/css/custom.css
+++ b/css/custom.css
@@ -38,8 +38,8 @@
 
 .treatment {
     outline: 0;
-    padding-left: 0;
-    padding-right: 0;
+    /*padding-left: 0;*/
+    /*padding-right: 0;*/
 }
 
 .treatment:before {
