--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 treatment mandator-{{treatment.mandator}}" ng-class="{secondary: !treatment.isMainTreatment, closed: treatment.closed}" tabindex="-1">
+<div class="col-xs-12 treatment mandator-{{treatment.mandator}}" ng-class="{secondary: !treatment.isMainTreatment, closed: treatment.closed || treatment.billed}" tabindex="-1">
     <div class="panel" ng-class="treatment.type=='success' ? 'panel-success' : 'panel-default'">
         <div class="panel-heading clearfix">
             <div class="row">
@@ -70,7 +70,20 @@
 
 
                 <div class="col-xs-2">
-                    <a class="btn btn-default dropdown-toggle">F:{{treatment.case}}</a>
+                    <div class="dropdown" toggle-focus dropdown>
+                        <a class="btn btn-default dropdown-toggle" dropdown-toggle>
+                            F:{{treatment.invoiceCase.name ? treatment.invoiceCase.name : '???' }}
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-show="treatment.invoiceCase.name"><a ng-href="{{dc.baseUrl}}show/case/{{treatment.invoiceCase.id}}/">Fall: {{treatment.invoiceCase.name}} anzeigen</a></li>
+                            <li ng-show="treatment.invoice.id"><a ng-href="{{dc.baseUrl}}show/invoice/{{treatment.invoice.id}}/">Rechnung: {{treatment.invoice.id}} anzeigen</a></li>
+                            <li role="presentation" class="divider" ng-show="treatment.invoice.id || treatment.invoiceCase.name"></li>
+                            <li><a ng-href="{{vm.baseUrl}}treatment/{{treatment.id}}/case/">Fall zuweisen...</a></li>
+                            <li ng-show="treatment.invoiceCase.name"><a href ng-click="dc.removeCase(treatment)">Ohne Fall</a></li>
+                            <li role="presentation" class="divider"></li>
+                            <li><a href>Gehe zu Fälle & Garanten</a></li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="col-xs-3">
