added goto case

--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -81,7 +81,7 @@
                             <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/case/">Fall zuweisen...</a></li>
                             <li ng-show="treatment.invoiceCase.name"><a href ng-click="dc.removeCase(treatment)">Ohne Fall</a></li>
                             <li role="presentation" class="divider"></li>
-                            <li><a href>Gehe zu Fälle & Garanten</a></li>
+                            <li><a ng-href="{{dc.baseUrl}}goto/case">Gehe zu Fälle & Garanten</a></li>
                         </ul>
                     </div>
                 </div>
